--- a/public/register.html
+++ b/public/register.html
@@ -67,7 +67,7 @@
     <section id="first">
         <div class="content">
             <h2>Об игре Дока 2</h2>
-            <div class="pole">
+            <div class="field">
                 <p><b>Дока 2</b> - это очень популярная и жестокая многопользовательская игра (строго от 18 и старше, но
                     многие играют и в 13-15 лет, и многие дети играют в дока 2). В основном в этой игре вы должны
                     вынимать и
@@ -78,7 +78,7 @@
                     оценят любители рока, особенно которые стали ими с детства!</p>
             </div>
             <h2>Герои</h2>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -221,7 +221,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -271,7 +271,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -324,7 +324,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -374,7 +374,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -424,7 +424,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -474,7 +474,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -524,7 +524,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
