--- a/public/heroes.html
+++ b/public/heroes.html
@@ -65,7 +65,7 @@
     <section id="first">
         <div class="content">
             <h2>Об игре Дока 2</h2>
-            <div class="pole">
+            <div class="field">
                 <p><b>Дока 2</b> - это очень популярная и жестокая многопользовательская игра (строго от 18 и старше, но
                     многие играют и в 13-15 лет, и многие дети играют в дока 2). В основном в этой игре вы должны
                     вынимать и
@@ -76,7 +76,7 @@
                     оценят любители рока, особенно которые стали ими с детства!</p>
             </div>
             <h2>Герои</h2>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -167,8 +167,8 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
-                <div class="heroname">
+            <div class="field">
+                <div class="heronames">
                     <h3></h3>
                 </div>
                 <div class="container">
@@ -219,7 +219,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -269,7 +269,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -322,7 +322,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -372,7 +372,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -422,7 +422,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -472,7 +472,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
@@ -522,7 +522,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pole">
+            <div class="field">
                 <div class="heroname">
                     <h3></h3>
                 </div>
